--- a/minetest.conf.example
+++ b/minetest.conf.example
@@ -98,11 +98,6 @@
 #    type: bool
 # continuous_forward = false
 
-#    (Android) Use virtual joystick to trigger "aux" button.
-#    If enabled, virtual joystick will also tap "aux" button when out of main circle.
-#    type: bool
-# virtual_joystick_triggers_aux = false
-
 #    Enable joysticks
 #    type: bool
 # enable_joysticks = false
@@ -776,10 +771,9 @@
 
 #    The rendering back-end for Irrlicht.
 #    A restart is required after changing this.
-#    Note: On Android, stick with OGLES1 if unsure! App may fail to start otherwise.
-#    On other platforms, OpenGL is recommended, and it’s the only driver with
+#    OpenGL is recommended, and it’s the only driver with
 #    shader support currently.
-#    type: enum values: null, software, burningsvideo, direct3d8, direct3d9, opengl, ogles1, ogles2
+#    type: enum values: null, software, burningsvideo, direct3d8, direct3d9, opengl
 # video_driver = opengl
 
 #    Radius of cloud area stated in number of 64 node cloud squares.
@@ -1084,7 +1078,7 @@
 
 ## Advanced
 
-#    Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k screens.
+#    Adjust dpi configuration to your screen (non X11 only) e.g. for 4k screens.
 #    type: int min: 1
 # screen_dpi = 72
 
